Fix overflow behavior in body and section styles

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -28,13 +28,13 @@ body {
   min-width: 100vw;
   min-height: 100vh;
   margin: 0;
+  overflow-x: hidden;
 }
 body[data-menu='open'] {
   overflow: hidden;
 }
 section {
   scroll-margin-top: 100px;
-  overflow: hidden;
 }
 
 .visually-hidden {
